2009-02-20 18:27 +0100  Rocco Rutte  <pdmef@gmx.net>  (3f57a654639d)

	* doc/manual.xml.head: Document address normalization. Closes #2430.

2009-02-20 13:23 +0100  Rocco Rutte  <pdmef@gmx.net>  (e37e857afc14)

	* ChangeLog, headers.c: Simplify and fix Attach: header parsing

	With ee5e696a9d08 we would skip beyond the filename to look for a
	description. This changeset fixes it.

2009-02-20 13:05 +0100  Rocco Rutte  <pdmef@gmx.net>  (b3f6d86e94f7)

	* main.c: Set magic from -m before processing queries (-Q) or dumping
	variables (-D)

2009-02-20 13:02 +0100  Rocco Rutte  <pdmef@gmx.net>  (61755dc4e44c)

	* ChangeLog, doc/mutt.man, init.h: Better document how the initial
	folder is determined. Closes #3189.

2009-02-15 16:09 +0100  Rocco Rutte  <pdmef@gmx.net>  (ee5e696a9d08)

	* doc/manual.xml.head, headers.c: Support spaces in Attach:
	pseudoheader. Closes #3179.

2009-02-10 13:05 +0100  Rocco Rutte  <pdmef@gmx.net>  (a21f8bf84149)

	* ChangeLog, init.h: Fix documentation typos. Closes #3178.

2009-01-27 12:58 -0800  Brendan Cully  <brendan@kublai.com>  (7ddf1d1cc490)

	* imap/imap.c: Move socket close into imap_logout from imap_logout_all

2009-01-27 12:17 -0800  Brendan Cully  <brendan@kublai.com>  (7c1e4f1c2ed4)

	* ChangeLog, imap/imap.c: IMAP: only close socket when not already
	disconnected.

2009-01-27 18:48 +0100  Rocco Rutte  <pdmef@gmx.net>  (d7e44862a08a)

	* help.c, main.c, mh.c: Update copyright years

	* help.c: Fix help alignment for escape sequences at screen
	boundary. Closes #3146.

	* mh.c: Unconditionally inode-sort Maildir and MH folders. Closes
	#3166.

2009-01-26 12:32 -0800  Brendan Cully  <brendan@kublai.com>  (da94a92c3ba0)

	* bcache.c: Remove old bcache tmpfile before trying to create new
	one. Closes #3163.

2009-01-20 12:34 -0800  René Clerc  <rene@clerc.nl>  (2006526d1d26)

	* po/nl.po: Updated Dutch translation

2009-01-19 20:39 -0800  Ivan Vilata i Balaguer  <ivan@selidor.net>  (038f1e5cdaea)
